--- a/netlify.toml
+++ b/netlify.toml
@@ -7,10 +7,14 @@
   to = "/index.html"
   status = 200
   force = false
-  conditions = {Role = ["*"]}
 
 [build.environment]
   NODE_VERSION = "20"
+
+[[headers]]
+  for = "/_astro/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/*"
